# stock_predict_websocket

./: .env  .env.example  Dockerfile  REDIS_KEYS.md  docker-compose.yml  pyproject.toml
.claude/: buy_sell.md
app/: main.py
app/config/: __init__.py  kafka_connections.py  settings.py
app/handler/: __init__.py  prediction_handler.py  websocket_handler.py
app/kafka/: __init__.py  asking_price_producer.py  daily_strategy_producer.py  manual_sell_consumer.py  order_signal_producer.py  predict_consumer.py  price_producer.py  websocket_consumer.py
app/kis/: __init__.py
app/kis/api/: order_api.py
app/kis/websocket/: __init__.py  account_client.py  error_stats.py  exceptions.py  krx_price_client.py  manager.py  nxt_price_client.py  price_client.py  redis_manager.py
app/models/: __init__.py  asking_price.py  position.py  prediction.py  price.py  websocket.py
app/service/: calculate_slippage.py  signal_execute.py  signal_generator.py  strategy_table.py
app/utils/: send_slack.py
test/: execution_test.py  mock_server.py  mocktest.py  paper_test.py
