[tool.poetry]
name = "stock-predict-websocket"
version = "0.1.0"
description = "Stock Prediction WebSocket Server"
authors = ["admin"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
websockets = "^14.0"
aiokafka = "^0.12.0"
pydantic = "^2.9.0"
pydantic-settings = "^2.6.0"
python-dotenv = "^1.0.0"
redis = "^5.0.0"
httpx = "^0.24.0"
pycryptodome = "^3.20.0"
pandas = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.24.0"
fakeredis = "^2.33.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
